feat: add deleting ad from campaign
